feat: add save event route
